<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <item
        android:id="@+id/f1"
        android:title="@string/fragment_1"
        android:icon="@drawable/ic_baseline_auto_awesome_mosaic_24"
        />
    <item
        android:id="@+id/f2"
        android:title="@string/fragment_2"
        android:icon="@drawable/ic_baseline_auto_awesome_mosaic_24"
        />
    <item
        android:id="@+id/f3"
        android:title="@string/fragment_3"
        android:icon="@drawable/ic_baseline_auto_awesome_mosaic_24"
        />
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_android_black_24dp"
        />
    <item
        android:id="@+id/fav"
        android:title="@string/favorites"
        android:icon="@drawable/ic_baseline_favorite_24"
        />
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_applications_24"
        />
     <item
        android:id="@+id/cart"
        android:title="@string/cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        />
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_baseline_logout_24"
        />
</menu>