<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/profile"
        app:showAsAction="ifRoom"
        android:title="@string/profile"
        android:icon="@drawable/ic_android_black_24dp"
        />
    <item
        android:id="@+id/fav"
        app:showAsAction="ifRoom"
        android:title="@string/favorites"
        android:icon="@drawable/ic_baseline_favorite_24"
        />
    <item
        android:id="@+id/settings"
        app:showAsAction="ifRoom"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_applications_24"
        />
     <item
        android:id="@+id/cart"
        app:showAsAction="ifRoom"
        android:title="@string/cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        />
    <item
        android:id="@+id/logout"
        app:showAsAction="ifRoom"
        android:title="@string/logout"
        android:icon="@drawable/ic_baseline_logout_24"
        />
</menu>